--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -4,3 +4,4 @@
     <li><%= training.user.imie %> <%= training.user.nazwisko %> - <%= training.data %> - <%= training.liczba_pompek %> pompek</li>
   <% end %>
 </ul>
+<li><%= link_to 'Dodaj trening', trainingsnew_path %></li>
