--- a/app/assets/stylesheets/rails_admin.scss
+++ b/app/assets/stylesheets/rails_admin.scss
@@ -1,4 +1,4 @@
 $fa-font-path: ".";
-@import "rails_admin/src/rails_admin/styles/base";
-@@import 'bootstrap';
+//@import "rails_admin/src/rails_admin/styles/base";
+//@import 'bootstrap';
 
