--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
           <li><%= link_to 'Strona główna', root_path %></li>
           <li><%= link_to 'Użytkownicy', users_path %></li>
           <li><%= link_to 'Treningi', trainings_path %></li>
+          <li><%= link_to 'Panel Administratora', admin_users_path %></li>
         </ul>
       </nav>
     </header>
