--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -5,3 +5,4 @@
   <% end %>
 </ul>
 <li><%= link_to 'Dodaj trening', trainingsnew_path %></li>
+<li><%= link_to 'Zobacz wykres', training_history_path %></li>
