mala naprawa routingu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,12 +46,12 @@
     }
 
     .notice {
-      background-color: #dff0d8;
+      <!--background-color: #dff0d8;-->
       padding: 10px;
     }
 
     .alert {
-      background-color: #f2dede;
+       <!--background-color: #f2dede;-->
       padding: 10px;
     }
 
