--- a/app/views/trainings/index.html.erb
+++ b/app/views/trainings/index.html.erb
@@ -4,5 +4,5 @@
     <li><%= training.user.imie %> <%= training.user.nazwisko %> - <%= training.data %> - <%= training.liczba_pompek %> pompek</li>
   <% end %>
 </ul>
-<li><%= link_to 'Dodaj trening', trainingsnew_path %></li>
+<li><%= link_to 'Dodaj trening', trainings_new_path %></li>
 <li><%= link_to 'Zobacz wykres', training_history_path %></li>
